discussion/kv_engine/184583/184583_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

Add experimental support for gRPC

Very WIP experimental support for gRPC

  * _BLOCKING_ the gRPC call for the duration of an operation
    (intentionally as we've not even tried to plug it into
    our async mode (thread is just waiting for the notification)
  * Only partly implementing the protocol spec'd from
    stellar-nebula (that protocol should probably get some
    love as it duplicates a lot of structs; have some "weird"
    parts etc)
  * Does not deal with all datatypes in all cases, copying over
    xattrs etc

Ex:

    ./grpc_test --user trond --password asdfasdf  Increment '
       {"key":"User1",
        "delta":1,
	"expiry":0,
	"initial":50,
	"scope_name":"foo",
	"collection_name":"bar",
	"bucket_name":"bucket"}'

    {
      "cas": 1674545273432637440,
      "content": 50,
      "mutation_token": {
        "bucket_name": "bucket",
        "seq_no": 3,
        "vbucket_id": 400,
        "vbucket_uuid": 88398876445528
      }
    }

Change-Id: If522f57fcbc1df3bb0c834302ea2260786a7250b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-07 21:13:03.000000000
Message: 
Uploaded patch set 19: Patch Set 18 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-07 22:25:06.000000000
Message: 
Patch Set 19: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22878/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_append_prepend_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_exists_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_and_lock_command.h:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_and_touch_command.h:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_replica_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_insert_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_remove_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_replace_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_service.cc:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_touch_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_unlock_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_upsert_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22878/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_append_prepend_command.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22878/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23110/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23110/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24514/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24514/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33357/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33357/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43894/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52330/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1679/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12610/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24941/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26252/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25399/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-03-09 09:11:55.000000000
Message: 
Abandoned

Added a new prototype
----------------------------------------------------------------------------------------------------------------------
